--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 
-    <title>Your mama</title>
+    <title>Load your file</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initital-scale=1">
     <link rel="icon" type="image/x-icon" href="favicon.ico">
@@ -49,6 +49,7 @@
 
 <form method="post" action="/read" enctype="multipart/form-data">
     <input type="file" name="input_file" />
+
     <input type="submit" class='grid-item' value="Enter" />
 </form>
 
